# 2dmom

./: README.md  makefile  run
Debug/: a.out
Src/: .cartesian.cpp.swp  .dielectric.cpp.swp  .dielectric.hpp.swp  .ycm_extra_conf.py  CMakeLists.txt  EMConst.hpp  cartesian.cpp  cartesian.hpp  circle.geo  circle.msh  dielectric.cpp  dielectric.hpp  greens.cpp  greens.hpp  main.cpp  mesh.cpp  mesh.hpp  plot.cpp  plot.hpp  readmatlab.cpp  readmatlab.hpp  tags
